--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,8 +9,8 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Notes/Section Notes/CE332-W01.md",
-            "mode": "preview",
+            "file": "Main/Course TOC/IF231.md",
+            "mode": "source",
             "source": true
           }
         }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Notes/Section Notes/CE332-W01.md",
+                "file": "Main/Course TOC/IF231.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,6 +89,7 @@
   },
   "active": "9ab9e1ed52015ada",
   "lastOpenFiles": [
+    "Main/Course TOC/IF231.md",
     "Notes/Section Notes/CE332-W01.md",
     "Main/Course TOC/CE332.md",
     "Main/UMN Informatics Second Term.md",
@@ -97,7 +98,6 @@
     "Templates/Course Templates.md",
     "Templates/Fleet Notes.md",
     "Templates/Section Notes.md",
-    "Notes/Fleet Notes/24012022-Function and Structure.md",
-    "Notes/Fleet Notes/24012022-Hierarchical System.md"
+    "Notes/Fleet Notes/24012022-Function and Structure.md"
   ]
 }
