Scripted backup on 10/02/22

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -11,5 +11,11 @@
     "en-US",
     "id"
   ],
-  "spellcheck": true
+  "spellcheck": true,
+  "pdfExportSettings": {
+    "pageSize": "A4",
+    "landscape": false,
+    "margin": "0",
+    "downscalePercent": 100
+  }
 }
