--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -14,18 +14,6 @@
             "source": true
           }
         }
-      },
-      {
-        "id": "2a1d17bdc99088ef",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Notes/Fleet Notes/05042022-Introduction in Story Message.md",
-            "mode": "source",
-            "source": true
-          }
-        }
       }
     ],
     "direction": "vertical"
@@ -65,7 +53,8 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300
+    "width": 300,
+    "collapsed": true
   },
   "right": {
     "id": "43ad2b096a759d6e",
